[package]
name = "bevy_simple_screen_boxing"
version = "0.1.1"
edition = "2024"
categories = ["game-development"]
keywords = ["bevy", "letterbox", "camera"]
license = "MIT OR Apache-2.0"
description = "A simple, but small, crate that aims to make Letter/Pillar Boxing in Bevy easy."
repository = "https://github.com/Sapein/bevy_simple_screen_boxing"
readme = "README.md"

[dependencies]
bevy_app = { version ="0.16", default-features = false }
bevy_asset = { version ="0.16", default-features = false }
bevy_math = { version = "0.16" , default-features = false, features = ["libm", "bevy_reflect"]}
bevy_reflect = { version ="0.16", default-features = false }
bevy_ecs = { version ="0.16", default-features = false }
bevy_image = { version ="0.16", default-features = false }
bevy_render = { version ="0.16", default-features = false }
bevy_window = { version = "0.16", default-features = false }
bevy_log = { version = "0.16", default-features = false }